--- a/DylanClarkeCsvToJson.csproj
+++ b/DylanClarkeCsvToJson.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Aspose.Cells" Version="21.12.0" />
+  </ItemGroup>
+
 </Project>
